fdo#43869 use the old rtf importer for paste